# WorthIt

./: LICENSE  README.md  __init__.py  algorithms.py  context.py  learning.py  models.py  pyproject.toml  simulation.py
calc/: cli.py
